--- a/templates/quest.html
+++ b/templates/quest.html
@@ -19,7 +19,7 @@
     <legend id="para1"><b>Поиск по корпусу</b></legend>
     <p><i>Введи слово и узнай правду</i></p>
 	Введите ваш запрос<br>
-    <input id="inquery" name="inquery"  required pattern='[A-Za-zА-Яа-яЁё]+'><br>
+    <input id="inquery" name="inquery"  required pattern='[A-Za-zА-Яа-яЁё]+{3}'><br>
 	
 	
 	</div><br>
